--- a/package.json
+++ b/package.json
@@ -6,14 +6,15 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "dist": "electron-builder"
+    "dist": "electron-builder",
+    "dist:mac": "electron-builder --mac"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "electron": "^25.0.0",
-    "electron-builder": "^22.14.13"
+    "electron-builder": "^24.13.3"
   },
   "build": {
     "appId": "com.tom.bear.lottery",
@@ -27,6 +28,13 @@
       "package.json"
     ],
     "extraFiles": [],
+    "mac": {
+      "target": [
+        "dmg",
+        "zip"
+      ],
+      "category": "public.app-category.utilities"
+    },
     "win": {
       "target": [
         {
